# gsuite-utils

./: .travis.yml  README.md  bulk_useradd.py  setup.cfg
gsuite/: __init__.py
tests/: newusers.xlsx  test_mod.py
