[metadata]
name = gsuite
version = 0.5.0
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
description = Utilities for bulk user/group operations on G Suite
url = https://github.com/scivision/gsuite-utils
keywords =
  google forms
  google admin
  googld drive
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: Information Technology
  Operating System :: OS Independent
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Topic :: Utilities
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
include_package_data = True
packages = find:
install_requires =
  pandas
  xlrd

[options.extras_require]
tests =
  pytest
  flake8
  mypy

[flake8]
max-line-length = 132
exclude = .git,__pycache__,.eggs/,doc/,docs/,build/,dist/,archive/
